--- a/Book Recommendation Chatbot.html
+++ b/Book Recommendation Chatbot.html
@@ -51,24 +51,21 @@
   <script>
    let watsonInstance; // store chatbot instance
 
-  window.watsonAssistantChatOptions = {
+ window.watsonAssistantChatOptions = {
     integrationID: "929a71c3-7bce-495b-a525-7c33f70ca481", // The ID of this integration.
     region: "au-syd", // The region your integration is hosted in.
     serviceInstanceID: "25694ddb-fad1-4124-b77a-de8ee352006d", // The ID of your service instance.
     onLoad: async (instance) => {
       watsonInstance = instance;
-      await instance.render(); // loads the chat widget
+       await instance.render(); // loads the chat widget
     }
   };
-
   setTimeout(function(){
     const t=document.createElement('script');
-    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" +
-           (window.watsonAssistantChatOptions.clientVersion || 'latest') +
-           "/WatsonAssistantChatEntry.js";
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
     document.head.appendChild(t);
   });
-  </script>
+</script>
 </head>
 <body>
   <div class="container">
